--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,41 @@
-[flake8]
-exclude = .?*, src/, build, docs
+[tool:ruff]
+target-version = py38
+line-length = 90
 
-[isort]
-force_single_line = true
-force_sort_within_sections = true
-lexicographical = true
-order_by_type = false
-lines_after_imports = 2
-skip_glob = *__init__.py
+# See https://github.com/charliermarsh/ruff#rules for error code definitions.
+
+select =
+    B   # bugbear
+    C   # comprehensions
+    E   # style errors
+    F   # flakes
+    I   # import sorting
+    RUF # ruff specific rules
+    UP  # upgrade
+    W   # style warnings
+    YTT # sys.version
+    ISC002
+    NPY201
+    TID251
+
+ignore =
+    C901    # Comprehension is too complex (11 > 10)
+    N802    # Function name should be lowercase
+    N806    # Variable in function should be lowercase
+    E501    # Line too long ({width} > {limit} characters)
+    B904    # raise ... from err
+    B905    # zip() without an explicit strict= parameter
+    RUF005  # recommends non-type-aware expansion
+
+# don't allow implicit string concatenation
+flake8-implicit-str-concat = {"allow-multiline" = false}
+
+[tool.ruff.lint.isort]
+force-single-line-imports = true
+force-sort-within-sections = true
+order-by-type = false
+
+[tool.ruff.lint.flake8-tidy-imports.banned-api]
+banned-api =
+    IPython.embed = you forgot to remove a debug embed ;)
+    numpy.empty = uninitialized arrays are haunted try numpy.zeros
